fix spacing in navbar

--- a/clear-lake-restoration-app/src/Components/Navigation.css
+++ b/clear-lake-restoration-app/src/Components/Navigation.css
@@ -10,8 +10,6 @@
 .navbar-dark .navbar-nav .nav-link {
   color: rgba(255,255,255);
   padding: 8px;
-  margin-left: 10px;
-  margin-right: 10px;
 }
 
 .navbar-dark .navbar-nav .nav-link:hover {
@@ -30,3 +28,15 @@
   border-radius: 0.25rem;
 }
 
+.wrapper {
+  max-width: none;
+}
+
+@media (min-width: 576px) {
+  .navbar-expand-sm .navbar-collapse {
+    /* justify-content: center; */
+  }
+  .navbar-expand-sm .navbar-nav {
+    gap: 30px;
+  }
+}
